--- a/src/public/html/tools.html
+++ b/src/public/html/tools.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="navbar"><span id="typewriter"> <span id="username"></span> </span></div>
+  <div class="navbar"><span id="typewriter"> <span id="username">Welcome</span> </span></div>
   <div id="toggleBtn"><i class="fa-solid fa-bars"></i></div>
 
   <!-- ✅ القائمة الجانبية -->
@@ -31,9 +31,9 @@
               <li><a href="https://dark-api-x.vercel.app/page/search"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
               <li><a href="https://dark-api-x.vercel.app/page/Ai"><i class="fa-solid fa-robot"></i> AI</a></li>
               <li><a href="https://dark-api-x.vercel.app/page/tools"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</a></li>
-           <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
               <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
-          </ul>
+              <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
+            </ul>
           </li>
 
           <li><a href="#"><i class="fa-solid fa-code"></i> Developers</a></li>
@@ -52,59 +52,48 @@
 
   <div class="api-container">
    
-<!-- Anti-Porn API -->
-<div class="api-card">
-  <i class="fas fa-shield-alt fa-3x"></i>
-  <h3>Anti-Porn Detection</h3>
-  <p>Check sticker or images to detect inappropriate content instantly.</p>
-  <div class="buttons">
-    <button class="test-btn" data-link="https://dark-api-x.vercel.app/api/v1/tools/check_porn?imageUrl=">Test</button>
-    <button class="copy-btn" data-copy="https://dark-api-x.vercel.app/api/check_porn?imageUrl=$">Copy</button>
-    <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/105">Code</button>
-  </div>
-</div>
- <!-- Code Tester -->
-<div class="api-card">
-  <i class="fas fa-code fa-3x"></i>
-  <h3>Code Tester</h3>
-  <p>Run and test your code instantly in [c cpp go java javascript python ruby] .</p>
-  <div class="buttons">
-    <button class="test-btn" data-link="https://dark-api-x.vercel.app/api/v1/tools/code_test?lang=python&code=print('Hello+World')">Test</button>
-    <button class="copy-btn" data-copy="https://dark-api-x.vercel.app/api/v1/tools/code_test?lang=&code=">Copy</button>
-    <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/105">Code</button>
-  </div>
-</div>
-
-    <!-- Pinterest Video 
+    <!-- Anti-Porn API -->
     <div class="api-card">
-      <i class="fab fa-pinterest fa-3x"></i>
-      <h3>Pinterest Video Download</h3>
-      <p>Download videos from Pinterest.</p>
+      <i class="fa-solid fa-shield-alt fa-3x"></i>
+      <h3>Anti-Porn Detection</h3>
+      <p>Check sticker or images to detect inappropriate content instantly.</p>
       <div class="buttons">
-        <button class="test-btn" data-link="https://dark-api-one.vercel.app/api/pinvid_dl?url=https://www.pinterest.com/i/IrBndCSaQ/">Test</button>
-        <button class="copy-btn" data-copy="https://dark-api-one.vercel.app/api/pinvid_dl?url=">Copy</button>
-        <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/102">Code</button>
+        <button class="test-btn" data-link="https://dark-api-x.vercel.app/api/v1/tools/check_porn?imageUrl=">Test</button>
+        <button class="copy-btn" data-copy="https://dark-api-x.vercel.app/api/check_porn?imageUrl=$">Copy</button>
+        <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/105">Code</button>
       </div>
-    </div>-->
+    </div>
 
-   <!-- Image to Anime -->
-<div class="api-card">
-  <i class="fas fa-user-ninja fa-3x"></i>
-  <h3>Image to Anime</h3>
-  <p>Transform any real photo into anime-style artwork.</p>
-  <div class="buttons">
-    <button class="test-btn" data-link="https://dark-api-x.vercel.app/api/v1/tools/to_anime?imgurl=">Test</button>
-    <button class="copy-btn" data-copy="https://dark-api-x.vercel.app/api/v1/tools/to_anime?imgurl=">Copy</button>
-    <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/106">Code</button>
-  </div>
-</div>
-    <!-- TikTok -->
+    <!-- Code Tester -->
+    <div class="api-card">
+      <i class="fa-solid fa-code fa-3x"></i>
+      <h3>Code Tester</h3>
+      <p>Run and test your code instantly in [c cpp go java javascript python ruby] .</p>
+      <div class="buttons">
+        <button class="test-btn" data-link="https://dark-api-x.vercel.app/api/v1/tools/code_test?lang=python&code=print('Hello+World')">Test</button>
+        <button class="copy-btn" data-copy="https://dark-api-x.vercel.app/api/v1/tools/code_test?lang=&code=">Copy</button>
+        <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/105">Code</button>
+      </div>
+    </div>
+
+    <!-- Image to Anime -->
+    <div class="api-card">
+      <i class="fa-solid fa-user-ninja fa-3x"></i>
+      <h3>Image to Anime</h3>
+      <p>Transform any real photo into anime-style artwork.</p>
+      <div class="buttons">
+        <button class="test-btn" data-link="https://dark-api-x.vercel.app/api/v1/tools/to_anime?imgurl=">Test</button>
+        <button class="copy-btn" data-copy="https://dark-api-x.vercel.app/api/v1/tools/to_anime?imgurl=">Copy</button>
+        <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/106">Code</button>
+      </div>
+    </div>
+
     <!-- Text to Voice Characters -->
-<div class="api-card">
-  <i class="fas fa-microphone-lines fa-3x"></i>
-  <h3>Text to Voice (Characters)</h3>
-  <p>Convert your text into voices of your favorite characters: رابر, ميكو, يوهان, يوكي, و غوكو.</p>
-         <div class="buttons">
+    <div class="api-card">
+      <i class="fa-solid fa-microphone-lines fa-3x"></i>
+      <h3>Text to Voice (Characters)</h3>
+      <p>Convert your text into voices of your favorite characters: رابر, ميكو, يوهان, يوكي, و غوكو.</p>
+      <div class="buttons">
         <button class="test-btn" data-link="https://dark-api-x.vercel.app/api/v1/tools/anime-voice?prompt=&voice=غوكو">Test</button>
         <button class="copy-btn" data-copy="https://dark-api-x.vercel.app/api/v1/tools/anime-voice?prompt=&voice=">Copy</button>
         <button class="code-btn" data-whatsapp="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c/103">Code</button>
