--- a/src/public/html/app.html
+++ b/src/public/html/app.html
@@ -162,11 +162,11 @@
               <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
             </ul>
           </li>
-          <li><a href="#"><i class="fa-solid fa-code"></i> Developers</a></li>
+          <li><a href="https://dark-api-x.vercel.app/developers"><i class="fa-solid fa-code"></i> Developers</a></li>
           <li><a href="#"><i class="fa-solid fa-users"></i> Profile</a></li>
-          <li><a href="#"><i class="fa-solid fa-circle-question"></i> Help</a></li>
-          <li><a href="#"><i class="fa-solid fa-envelope"></i> Contact Us</a></li>
-        </ul>
+          <li><a href="https://dark-api-x.vercel.app/Help"><i class="fa-solid fa-circle-question"></i> Help</a></li>
+          <li><a href="https://dark-api-x.vercel.app/https:/Contact_Us"><i class="fa-solid fa-envelope"></i> Contact Us</a></li>
+       </ul>
       </div>
       <div class="logout"><a href="#"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></div>
     </div>
