--- a/src/public/html/search.html
+++ b/src/public/html/search.html
@@ -34,10 +34,11 @@
               <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
             </ul>
           </li>
-          <li><a href="#"><i class="fa-solid fa-code"></i> Developers</a></li>
+          
+          <li><a href="https://dark-api-x.vercel.app/developers"><i class="fa-solid fa-code"></i> Developers</a></li>
           <li><a href="#"><i class="fa-solid fa-users"></i> Profile</a></li>
-          <li><a href="#"><i class="fa-solid fa-circle-question"></i> Help</a></li>
-          <li><a href="#"><i class="fa-solid fa-envelope"></i> Contact Us</a></li>
+          <li><a href="https://dark-api-x.vercel.app/Help"><i class="fa-solid fa-circle-question"></i> Help</a></li>
+          <li><a href="https://dark-api-x.vercel.app/https:/Contact_Us"><i class="fa-solid fa-envelope"></i> Contact Us</a></li>
         </ul>
       </div>
 
