--- a/src/public/html/download.html
+++ b/src/public/html/download.html
@@ -1,4 +1,4 @@
-<<liTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -37,7 +37,7 @@
          <li><a href="https://dark-api-x.vercel.app/developers"><i class="fa-solid fa-code"></i> Developers</a></li>
           <li><a href="#"><i class="fa-solid fa-users"></i> Profile</a></li>
           <li><a href="https://dark-api-x.vercel.app/Help"><i class="fa-solid fa-circle-question"></i> Help</a></li>
-          <li><a href="https://dark-api-x.vercel.app/https:/Contact_Us"><i class="fa-solid fa-envelope"></i> Contact Us</a></li>
+          <li><a href="https://dark-api-x.vercel.app/Contact_Us"><i class="fa-solid fa-envelope"></i> Contact Us</a></li>
     
         </ul>
       </div>
